Archive2/b3/ed9e3b6b26fdc7/output
main.cpp:12:5: error: no matching function for call to object of type 'std::function<void (Foo &)>'
    callback();
    ^~~~~~~~
/usr/include/c++/v1/functional:1504:9: note: candidate function not viable: requires 1 argument, but 0 were provided
    _Rp operator()(_ArgTypes...) const;
        ^
1 error generated.
