Archive2/b3/ed9e3b6b26fdc7/main.cpp
#include <functional>
#include <iostream>

struct Foo {
    void foo() {
        std::cout << "Called foo";
    }
};

int main() {
    std::function<void(Foo &)> callback(&Foo::foo);
    callback();
}